[metadata]
name = parsnip
version = 0.1
author = Kyle Boone
author_email = kyboone@uw.edu
description = A generative model of transient light curves
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kboone/parsnip
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    astropy
    extinction
    lcdata
    lightgbm
    matplotlib
    scikit-learn
    scipy
    sncosmo
    torch
    tqdm
scripts =
    scripts/parsnip_build_plasticc_combined
    scripts/parsnip_predict
    scripts/parsnip_train

[options.extras_require]
docs = # Required to build the docs.
    numpy
    sphinx
    sphinx_rtd_theme
    pillow
    numpydoc
