[metadata]
name = astro-parsnip
version = 1.0.0
author = Kyle Boone
author_email = kyboone@uw.edu
description = Deep generative modeling of astronomical transient light curves
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kboone/parsnip
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    astropy
    extinction
    lcdata
    lightgbm
    matplotlib
    numpy
    scikit-learn
    scipy
    sncosmo>=2.6
    torch
    tqdm
scripts =
    scripts/parsnip_build_plasticc_combined
    scripts/parsnip_predict
    scripts/parsnip_train
include_package_data = True

[options.package_data]
parsnip = models/*.pt

[options.extras_require]
docs = # Required to build the docs.
    numpy
    sphinx
    sphinx_rtd_theme
    pillow
    numpydoc
